# Surakarta_Zero

./: .gitignore  ArrayList.cpp  ArrayList.h  Boardstack.cpp  Boardstack.h  CMakeLists.txt  MCTSData.txt  a.out  basic.cpp  basic.h  chessboard.cpp  chessboard.h  evaluator.cpp  game_ai.cpp  main  main.cpp  move_generator.cpp  out.cpp  out.h  search_engine.cpp  search_engine.h  stack.cpp  stack.h  test.cpp  test.h  test.h.gch  ui.cpp  ui.h
a.out.dSYM/Contents/Resources/DWARF/: a.out
main.dSYM/Contents/Resources/DWARF/: main
paper/: paper.md
resource/: code.txt  store.txt
resource/Data/: testAlphaBeta.txt  testResult.txt
resource/rl/: output1.txt
